--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/style/styles.css">
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 <body>
 <nav class="navbar">
@@ -21,5 +21,34 @@
         </ul>
     </div>
 </nav>
+<main>
+    <section class="about1-section1">
+        <div class="about1-div1">
+        <h1>Learn More About Us</h1>
+        <p>AND OUR PASSION FOR IMPECCABLY ELEGANT ARRANGEMENTS</p>
+      </div>
+    </section>
+    <section class="about2">
+        <div class="about2-div">
+            <h2>The Flower Puff Story</h2>
+            <p>We create floral bouquets, boxed blooms, preserved arrangements, and many other impeccable floral creations. Our arrangements are known for their elegant mix of blooms, color, and texture paired with our notable style of wrapping and detailed finishing touches. Our florists are remarkably dedicated and skillful artists who have spent years polishing their craft and pay meticulous attention to detail.</p>
+        </div>
+    </section>
+  </main>
+<footer>
+    <section class="section4">
+    <div class="logo-footer">
+        <a href="index.html"><img src="../assets/image/logo.png"></a>
+    </div>
+    <div class="footer-menu">
+    <ul>
+        <li><a href="./pages/shop.html">Shop</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="./pages/services.html">Services</a></li>
+        <li><a href="./pages/contacts.html">Contact</a></li>
+    </ul>
+</div>
+</section>
+</footer>
 </body>
 </html>
