--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
                 <div class="section1-div2">
                     <h1>BEAUTY BLOOM</h1>
                     <p>SELECT FROM OUR CURATED COLLECTION OF FRESH AND TASTEFULL ARRANGEMENT OF FLOWERS</p>
-                </div>
-                <div class="section1-button">
                     <a href="./pages/shop.html"><button>SHOP NOW</button></a>
                 </div>
             </div>
@@ -59,17 +57,18 @@
 </header>
 <footer>
     <section class="section4">
-    <div class="logo    ">
+    <div class="logo-footer">
         <a href="index.html"><img src="./assets/image/logo.png"></a>
     </div>
-</section>
+    <div class="footer-menu">
     <ul>
-        <li><a href="index.html">Home</a></li>
         <li><a href="./pages/shop.html">Shop</a></li>
         <li><a href="./pages/about.html">About</a></li>
         <li><a href="./pages/services.html">Services</a></li>
         <li><a href="./pages/contacts.html">Contact</a></li>
     </ul>
+</div>
+</section>
 </footer>
 </body>
 </html>
