--- a/pages/about.html
+++ b/pages/about.html
@@ -16,8 +16,6 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="./shop.html">Shop</a></li>
             <li><a href="./about.html">About</a></li>
-            <li><a href="./services.html">Services</a></li>
-            <li><a href="./contacts.html">Contact</a></li>
         </ul>
     </div>
 </nav>
@@ -30,10 +28,59 @@
     </section>
     <section class="about2">
         <div class="about2-div">
-            <h2>The Flower Puff Story</h2>
+            <div class="about2-div2">
+                <h2>The Flower Puff Story</h2>
             <p>We create floral bouquets, boxed blooms, preserved arrangements, and many other impeccable floral creations. Our arrangements are known for their elegant mix of blooms, color, and texture paired with our notable style of wrapping and detailed finishing touches. Our florists are remarkably dedicated and skillful artists who have spent years polishing their craft and pay meticulous attention to detail.</p>
+            </div>
+            <img src="../assets/image/section2img.jpg" alt="flower">
         </div>
     </section>
+<section id="services" class="services-section">
+    <h2>Our Services</h2>
+    <div class="services-container">
+        <div class="service">
+            <h3>Flower Arrangements</h3>
+            <p>We create custom flower arrangements for all occasions including weddings, birthdays, and anniversaries. Let us help make your special day even more memorable!</p>
+        </div>
+        <div class="service">
+            <h3>Same-Day Delivery</h3>
+            <p>Need flowers in a hurry? We offer same-day delivery to make sure your loved ones get their beautiful blooms on time.</p>
+        </div>
+        <div class="service">
+            <h3>Wedding Flowers</h3>
+            <p>Our expert florists will work with you to design the perfect floral arrangements for your wedding day, from bouquets to centerpieces and everything in between.</p>
+        </div>
+        <div class="service">
+            <h3>Corporate Gifting</h3>
+            <p>Enhance your corporate events or surprise your colleagues with elegant flower arrangements tailored to your company's style and budget.</p>
+        </div>
+        <div class="service">
+            <h3>Floral Subscriptions</h3>
+            <p>Enjoy fresh flowers regularly with our floral subscription service. Choose your preferred flowers and delivery schedule, and we'll take care of the rest!</p>
+        </div>
+    </div>
+</section>
+<section>
+    <section id="contact" class="contact-section">
+    <div class="contact-content">
+        <h2>Contact Us</h2>
+        <p>We'd love to hear from you! Reach out to us through any of the following contact methods:</p>
+        <div class="contact-info">
+            <div class="contact-item">
+                <h3>Phone</h3>
+                <p>+63905 121 9012</p>
+            </div>
+            <div class="contact-item">
+                <h3>Email</h3>
+                <p>Raine0311@gmail.com</p>
+            </div>
+            <div class="contact-item">
+                <h3>Address</h3>
+                <p>Cordova Public College, Cebu City, 6017</p>
+            </div>
+        </div>
+    </div>
+</section>
   </main>
 <footer>
     <section class="section4">
@@ -44,8 +91,6 @@
     <ul>
         <li><a href="./pages/shop.html">Shop</a></li>
         <li><a href="./pages/about.html">About</a></li>
-        <li><a href="./pages/services.html">Services</a></li>
-        <li><a href="./pages/contacts.html">Contact</a></li>
     </ul>
 </div>
 </section>
