--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
     <title>About Us</title>
 </head>
 <body>
+<header>
 <nav class="navbar">
     <div class="navdiv">
         <div class="logo"><a href="../index.html"><img src="../assets/image/logo.png" alt="logo"></a>
@@ -19,6 +20,7 @@
         </ul>
     </div>
 </nav>
+</header>
 <main>
     <section class="about1-section1">
         <div class="about1-div1">
@@ -60,7 +62,6 @@
         </div>
     </div>
 </section>
-<section>
     <section id="contact" class="contact-section">
     <div class="contact-content">
         <h2>Contact Us</h2>
@@ -78,6 +79,14 @@
                 <h3>Address</h3>
                 <p>Cordova Public College, Cebu City, 6017</p>
             </div>
+             <div class="contact-item">
+                <h3>Members</h3>
+                <ul>
+                    <li>Lorence Clint T. Andes</li>
+                    <li>Kirsty D. Aredidon</li>
+                    <li>Sophia Karylle A. Chavez</li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
@@ -89,8 +98,8 @@
     </div>
     <div class="footer-menu">
     <ul>
-        <li><a href="./pages/shop.html">Shop</a></li>
-        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 </div>
 </section>
