--- a/pages/shop.html
+++ b/pages/shop.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shop</title>
     <link rel="stylesheet" href="../assets/style/styles.css">
 </head>
 <body>
@@ -19,5 +19,106 @@
     </ul>
 </div>
 </nav>
+<main>
+    <section class="shop-section">
+        <div class="shop-logo">
+            <img src="../assets/image/logo.png" alt="logo">
+        <div class="shop-div1">
+            <h1>CATEGORIES</h1>
+            <ul>
+                <li> <input type="checkbox">Flame</li>
+                <li> <input type="checkbox">Daydream</li>
+                <li> <input type="checkbox">Pink Passion</li>
+                <li> <input type="checkbox">Sunnies</li>
+                <li> <input type="checkbox">Glam</li>
+                <li> <input type="checkbox">Taupe</li>
+                <li> <input type="checkbox">Pink Tulips</li>
+                <li> <input type="checkbox">White Tulips</li>
+                <li> <input type="checkbox">Unchanted Love</li>
+                <li> <input type="checkbox">Purple Tulips</li>
+                <li> <input type="checkbox">Charming</li>
+                <li> <input type="checkbox">Snow</li>
+            </ul>
+        </div>
+        </div>
+        <div class="shop-sales">
+        <ul>
+            <li>
+                <img src="../assets/image/shop1.jpg" alt="shop 1">
+                <p>FLAME</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop2.jpg" alt="shop 2">
+                <p>DAYDREAM</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop3.jpg" alt="shop 3">
+                <p>PINK PASSION</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop4.jpg" alt="shop 4">
+                <p>SUNNIES</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop5.jpg" alt="shop 5">
+                <p>GLAM</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop6.jpg" alt="shop 6">
+                <p>TAUPE</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop7.jpg" alt="shop 7">
+                <p>PINK TULIPS</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop8.jpg" alt="shop 8">
+                <p>WHITE TULIPS</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop9.jpg" alt="shop 9">
+                <p>UNCHANTED LOVE</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop10.jpg" alt="shop 10">
+                <p>PURPLE TULIPS</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop11.jpg" alt="shop 11">
+                <p>CHARMING</p>
+                <p>₱1,499.00</p>
+            </li>
+            <li>
+                <img src="../assets/image/shop12.jpg" alt="shop 12">
+                <p>SNOW</p>
+                <p>₱1,499.00</p>
+            </li>
+        </ul>
+        </div>
+    </section>
+</main>
+<footer>
+    <section class="section4">
+    <div class="logo-footer">
+        <a href="index.html"><img src="../assets/image/logo.png"></a>
+    </div>
+    <div class="footer-menu">
+    <ul>
+        <li><a href="./pages/shop.html">Shop</a></li>
+        <li><a href="./pages/about.html">About</a></li>
+    </ul>
+</div>
+</section>
+</footer>
 </body>
 </html>
