--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <footer>
     <section class="section4">
     <div class="logo-footer">
-        <a href="index.html"><img src="./assets/image/logo.png"></a>
+        <a href="/index.html"><img src="./assets/image/logo.png"></a>
     </div>
     <div class="footer-menu">
     <ul>
