--- a/pages/about.html
+++ b/pages/about.html
@@ -60,9 +60,9 @@
             <h3>Floral Subscriptions</h3>
             <p>Enjoy fresh flowers regularly with our floral subscription service. Choose your preferred flowers and delivery schedule, and we'll take care of the rest!</p>
         </div>
-    </div>
+    </div>  
 </section>
-    <section id="contact" class="contact-section">
+   <section id="contact" class="contact-section">
     <div class="contact-content">
         <h2>Contact Us</h2>
         <p>We'd love to hear from you! Reach out to us through any of the following contact methods:</p>
@@ -89,17 +89,17 @@
             </div>
         </div>
     </div>
-</section>
+</section> 
   </main>
 <footer>
     <section class="section4">
     <div class="logo-footer">
-        <a href="index.html"><img src="../assets/image/logo.png"></a>
+        <a href="../index.html"><img src="../assets/image/logo.png"></a>
     </div>
     <div class="footer-menu">
     <ul>
         <li><a href="shop.html">Shop</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../pages/about.html">About</a></li>
     </ul>
 </div>
 </section>
