--- a/pages/shop.html
+++ b/pages/shop.html
@@ -47,61 +47,73 @@
                 <img src="../assets/image/shop1.jpg" alt="shop 1">
                 <p>FLAME</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop2.jpg" alt="shop 2">
                 <p>DAYDREAM</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop3.jpg" alt="shop 3">
                 <p>PINK PASSION</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop4.jpg" alt="shop 4">
                 <p>SUNNIES</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop5.jpg" alt="shop 5">
                 <p>GLAM</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop6.jpg" alt="shop 6">
                 <p>TAUPE</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop7.jpg" alt="shop 7">
                 <p>PINK TULIPS</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop8.jpg" alt="shop 8">
                 <p>WHITE TULIPS</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop9.jpg" alt="shop 9">
                 <p>UNCHANTED LOVE</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop10.jpg" alt="shop 10">
                 <p>PURPLE TULIPS</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop11.jpg" alt="shop 11">
                 <p>CHARMING</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
             <li>
                 <img src="../assets/image/shop12.jpg" alt="shop 12">
                 <p>SNOW</p>
                 <p>₱1,499.00</p>
+                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
             </li>
         </ul>
         </div>
@@ -110,7 +122,7 @@
 <footer>
     <section class="section4">
     <div class="logo-footer">
-        <a href="index.html"><img src="../assets/image/logo.png"></a>
+        <a href="../index.html"><img src="../assets/image/logo.png"></a>
     </div>
     <div class="footer-menu">
     <ul>
