--- a/pages/about.html
+++ b/pages/about.html
@@ -80,11 +80,13 @@
                 <p>Cordova Public College, Cebu City, 6017</p>
             </div>
              <div class="contact-item">
-                <h3>Members</h3>
+                <h3>Owner/Co-owner</h3>
                 <ul>
                     <li>Lorence Clint T. Andes</li>
                     <li>Kirsty D. Aredidon</li>
                     <li>Sophia Karylle A. Chavez</li>
+                    <li>Dixon Espinosa</li>
+                    <li>Nica Jane Mosqueda</li>
                 </ul>
             </div>
         </div>
@@ -97,10 +99,7 @@
         <a href="../index.html"><img src="../assets/image/logo.png"></a>
     </div>
     <div class="footer-menu">
-    <ul>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="../pages/about.html">About</a></li>
-    </ul>
+<p>Copyrights 2025. Flower Puff’s Management. All Rights Reserved.</p>
 </div>
 </section>
 </footer>
