--- a/index.html
+++ b/index.html
@@ -54,17 +54,13 @@
     </main>
 </header>
 <footer>
-    <section class="section4">
-    <div class="logo-footer">
-        <a href="/index.html"><img src="./assets/image/logo.png"></a>
+  <div class="section4">
+    <p class="footer-text">Copyrights 2025. Flower Puff’s Management. All Rights Reserved.</p>
+
+    <div class="footer-right">
+      <button class="admin-btn" onclick="window.location.href='./pages/admin-login.html'">Admin</button>
     </div>
-    <div class="footer-menu">
-    <ul>
-        <li><a href="./pages/shop.html">Shop</a></li>
-        <li><a href="./pages/about.html">About</a></li>
-    </ul>
-</div>
-</section>
+  </div>
 </footer>
 </body>
 </html>
