--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,136 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop</title>
-    <link rel="stylesheet" href="../assets/style/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shop</title>
+  <link rel="stylesheet" href="../assets/style/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <style>
+    .stock-level {
+      color: #333;
+      font-weight: 600;
+      font-size: 14px;
+      margin: 5px 0;
+    }
+    .stock-level.out {
+      color: red;
+    }
+    .flying-img {
+      position: fixed;
+      z-index: 9999;
+      width: 100px;
+      height: auto;
+      border-radius: 10px;
+      transition: all 0.8s ease-in-out;
+      pointer-events: none;
+    }
+  </style>
 </head>
+
 <body>
-<nav class="navbar">
+  <!-- Navbar -->
+  <nav class="navbar">
     <div class="navdiv">
-        <div class="logo"><a href="../index.html"><img src="../assets/image/logo.png" alt="logo"></a>
+      <div class="logo">
+        <a href="../index.html"><img src="../assets/image/logo.png" alt="logo" /></a>
         <a href="../index.html"><p>FLOWER PUFF</p></a>
-        </div>
-        <ul>
+      </div>
+      <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="./shop.html">Shop</a></li>
         <li><a href="./about.html">About</a></li>
-    </ul>
-</div>
-</nav>
-<main>
-    <section class="shop-section">
-        <div class="shop-logo">
-            <img src="../assets/image/logo.png" alt="logo">
-        <div class="shop-div1">
-            <h1>CATEGORIES</h1>
-            <ul>
-                <li> <input type="checkbox">Flame</li>
-                <li> <input type="checkbox">Daydream</li>
-                <li> <input type="checkbox">Pink Passion</li>
-                <li> <input type="checkbox">Sunnies</li>
-                <li> <input type="checkbox">Glam</li>
-                <li> <input type="checkbox">Taupe</li>
-                <li> <input type="checkbox">Pink Tulips</li>
-                <li> <input type="checkbox">White Tulips</li>
-                <li> <input type="checkbox">Unchanted Love</li>
-                <li> <input type="checkbox">Purple Tulips</li>
-                <li> <input type="checkbox">Charming</li>
-                <li> <input type="checkbox">Snow</li>
-            </ul>
-        </div>
-        </div>
-        <div class="shop-sales">
-        <ul>
-            <li>
-                <img src="../assets/image/shop1.jpg" alt="shop 1">
-                <p>FLAME</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop2.jpg" alt="shop 2">
-                <p>DAYDREAM</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop3.jpg" alt="shop 3">
-                <p>PINK PASSION</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop4.jpg" alt="shop 4">
-                <p>SUNNIES</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop5.jpg" alt="shop 5">
-                <p>GLAM</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop6.jpg" alt="shop 6">
-                <p>TAUPE</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop7.jpg" alt="shop 7">
-                <p>PINK TULIPS</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop8.jpg" alt="shop 8">
-                <p>WHITE TULIPS</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop9.jpg" alt="shop 9">
-                <p>UNCHANTED LOVE</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop10.jpg" alt="shop 10">
-                <p>PURPLE TULIPS</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop11.jpg" alt="shop 11">
-                <p>CHARMING</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-            <li>
-                <img src="../assets/image/shop12.jpg" alt="shop 12">
-                <p>SNOW</p>
-                <p>₱1,499.00</p>
-                <a href="../pages/details.html"><button class="buy-btn">BUY</button></a>
-            </li>
-        </ul>
-        </div>
-    </section>
-</main>
-<footer>
-    <section class="section4">
-    <div class="logo-footer">
-        <a href="../index.html"><img src="../assets/image/logo.png"></a>
+        <li>
+          <a href="./cart.html" class="cart-link">
+            <i class="fa-solid fa-cart-shopping cart-icon"></i>
+            <span id="cart-count"></span>
+          </a>
+        </li>
+      </ul>
     </div>
-    <div class="footer-menu">
-    <ul>
-        <li><a href="./pages/shop.html">Shop</a></li>
-        <li><a href="./pages/about.html">About</a></li>
-    </ul>
-</div>
-</section>
-</footer>
+  </nav>
+
+  <!-- Main Content -->
+  <main>
+    <section class="shop-section">
+      <div class="shop-logo">
+        <img src="../assets/image/logo.png" alt="logo" />
+        <div class="shop-div1">
+          <h1>CATEGORIES</h1>
+          <ul>
+            <li><input type="checkbox" />Flame</li>
+            <li><input type="checkbox" />Daydream</li>
+            <li><input type="checkbox" />Pink Passion</li>
+            <li><input type="checkbox" />Sunnies</li>
+            <li><input type="checkbox" />Glam</li>
+            <li><input type="checkbox" />Taupe</li>
+            <li><input type="checkbox" />Pink Tulips</li>
+            <li><input type="checkbox" />White Tulips</li>
+            <li><input type="checkbox" />Unchanted Love</li>
+            <li><input type="checkbox" />Purple Tulips</li>
+            <li><input type="checkbox" />Charming</li>
+            <li><input type="checkbox" />Snow</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="shop-sales">
+        <ul id="shopList"></ul>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <section class="section4">
+      <div class="logo-footer">
+        <a href="../index.html"><img src="../assets/image/logo.png" /></a>
+      </div>
+      <div class="footer-menu">
+        <p>Copyrights 2025. Flower Puff’s Management. All Rights Reserved.</p>
+      </div>
+    </section>
+  </footer>
+
+  <!-- Script -->
+  <script>
+// ======== LOAD PRODUCTS FROM LOCALSTORAGE ========
+let products = JSON.parse(localStorage.getItem("products")) || [];
+
+const shopList = document.getElementById("shopList");
+
+function renderShop() {
+  shopList.innerHTML = "";
+
+  if (products.length === 0) {
+    shopList.innerHTML = "<p>No products available.</p>";
+    return;
+  }
+
+  products.forEach((p, index) => {
+    const li = document.createElement("li");
+    li.innerHTML = `
+      <img src="${p.image}" alt="${p.name}">
+      <p>${p.name}</p>
+      <p>₱${p.price}</p>
+      <p class="stock-level ${p.stock <= 0 ? "out" : ""}">
+        ${p.stock > 0 ? `In Stock: ${p.stock} pcs` : "Out of Stock"}
+      </p>
+      <button class="buy-btn" 
+        ${p.stock <= 0 ? "disabled" : ""}
+        onclick="addToCart(${index}, this)">
+        Add to Cart
+      </button>
+    `;
+    shopList.appendChild(li);
+  });
+}
+
+// ======== ADD TO CART FUNCTION ========
+function addToCart(index, button) {
+  const product = products[index];
+  if (!product || product.stock <= 0) return;
+
+  // 🛒 Update stock
+  product.stock--;
+  localStorage.setItem("products", JSON.stringify(products));
+
+  // 🛍️ Add to cart
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(item => item.name === product.name);
+  if (existing) {
+    existing.quantity++;
+  } else {
+    cart.push({ name: product.name, price: product.price, image: product.image, quantity: 1 });
+  }
+  localStorage.setItem("cart", JSON.stringify(cart));
+
+  // ✅ Animate image
+  const img = button.closest("li").querySelector("img");
+  animateToCart(img);
+
+  // ✅ Update shop view and cart counter (without clearing)
+  renderShop();
+  updateCartCount();
+}
+
+// ======== ANIMATION ========
+function animateToCart(img) {
+  const cartIcon = document.querySelector(".cart-icon");
+  if (!cartIcon || !img) return;
+
+  const flyingImg = img.cloneNode(true);
+  flyingImg.classList.add("flying-img");
+  document.body.appendChild(flyingImg);
+
+  const imgRect = img.getBoundingClientRect();
+  const cartRect = cartIcon.getBoundingClientRect();
+
+  flyingImg.style.left = imgRect.left + "px";
+  flyingImg.style.top = imgRect.top + "px";
+
+  requestAnimationFrame(() => {
+    flyingImg.style.transform = `translate(${cartRect.left - imgRect.left}px, ${cartRect.top - imgRect.top}px) scale(0.1)`;
+    flyingImg.style.opacity = "0";
+  });
+
+  flyingImg.addEventListener("transitionend", () => flyingImg.remove());
+}
+
+// ======== UPDATE CART COUNT ========
+function updateCartCount() {
+  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const total = cart.reduce((sum, i) => sum + i.quantity, 0);
+  document.getElementById("cart-count").textContent = total;
+}
+
+// ======== INITIALIZE ========
+renderShop();
+updateCartCount();
+</script>
 </body>
 </html>
