--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -10,7 +10,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-left">
-      <a href="../index.html">
+      <a href="../index.php">
         <img src="../assets/image/logo.png" alt="Flower Puff Logo">
         <p>FLOWER PUFF</p>
       </a>
@@ -18,7 +18,7 @@
   </nav>
 
   <!-- Back Button -->
-  <button class="back-btn" onclick="window.location.href='admin.html'">Back</button>
+  <button class="back-btn" onclick="window.location.href='admin.php'">Back</button>
 
   <!-- Forgot Password Form -->
   <main class="forgot-container">
@@ -48,7 +48,7 @@
   <footer>
     <section class="section4">
       <div class="logo-footer">
-        <a href="../index.html"><img src="../assets/image/logo.png" alt="logo"></a>
+        <a href="../index.php"><img src="../assets/image/logo.png" alt="logo"></a>
       </div>
       <div class="footer-menu">
         <p>Copyrights 2025. Flower Puff’s Management. All Rights Reserved.</p>
@@ -58,27 +58,61 @@
 
   <script src="../assets/script/forgot-password.js"></script>
   <script>
-    document.getElementById("forgotForm").addEventListener("submit", function(e) {
-  e.preventDefault();
+    async function postJson(url, payload) {
+      const res = await fetch(url, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload)
+      });
+      return res.json();
+    }
 
-  const email = document.getElementById("email").value.trim();
-  const newPassword = document.getElementById("newPassword").value.trim();
-  const confirmPassword = document.getElementById("confirmPassword").value.trim();
+    document.getElementById("forgotForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
 
-  if (!email || !newPassword || !confirmPassword) {
-    alert("Please fill out all fields.");
-    return;
-  }
+      const email = document.getElementById("email").value.trim();
+      const newPassword = document.getElementById("newPassword").value.trim();
+      const confirmPassword = document.getElementById("confirmPassword").value.trim();
 
-  if (newPassword !== confirmPassword) {
-    alert("Passwords do not match!");
-    return;
-  }
+      if (!email || !newPassword || !confirmPassword) {
+        alert("Please fill out all fields.");
+        return;
+      }
 
-  // Simulate password reset success
-  alert("Password reset successful! Returning to login page...");
-  window.location.href = "admin-login.html";
-});
+      if (newPassword !== confirmPassword) {
+        alert("Passwords do not match!");
+        return;
+      }
+
+      try {
+        // use fetch and inspect response to provide clearer errors
+        const res = await fetch('admin-login.php', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ action: 'reset_password', email, newPassword })
+        });
+
+        const text = await res.text();
+        let data;
+        try {
+          data = JSON.parse(text);
+        } catch (parseErr) {
+          console.error('Server response is not JSON:', text);
+          alert('Failed to reset password. Server returned unexpected response. Check server logs.');
+          return;
+        }
+
+        if (data.success) {
+          alert('Password reset successful! Returning to login page...');
+          window.location.href = 'admin-login.php';
+        } else {
+          alert('Error: ' + (data.error || 'Unable to reset password'));
+        }
+      } catch (err) {
+        console.error(err);
+        alert('Failed to reset password (network or server error)');
+      }
+    });
   </script>
 </body>
 </html>
